k8s/04-deployments-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-db
  namespace: nexusreview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-db
  template:
    metadata:
      labels:
        app: nexus-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-init-sql
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: mysql-init-sql
        configMap:
          name: nexus-configs
          items:
          - key: db.sql
            path: 01-db.sql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-redis
  namespace: nexusreview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-redis
  template:
    metadata:
      labels:
        app: nexus-redis
    spec:
      containers:
      - name: redis
        image: redis:6.2
        command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /data
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: redis-pvc
