k8s/05-deployments-middleware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-kafka
  namespace: nexusreview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-kafka
  template:
    metadata:
      labels:
        app: nexus-kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:3.7.0
        ports:
        - containerPort: 9092
