k8s/07-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-db
  namespace: nexusreview
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: nexus-db
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-redis
  namespace: nexusreview
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: nexus-redis
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-kafka
  namespace: nexusreview
spec:
  ports:
  - port: 9092
    targetPort: 9092
  selector:
    app: nexus-kafka
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-backend
  namespace: nexusreview
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: nexus-backend
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-frontend
  namespace: nexusreview
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nexus-frontend
